--- a/msgsign.html
+++ b/msgsign.html
@@ -41,7 +41,7 @@
     </label>
     <label>
         <br>
-        <input type="button" id="SignButton" onclick="SignOnClick()" name="SignButton" value="Sign" disabled>
+        <input type="button" id="SignButton" onclick="SignOnClick()" name="SignButton" value="Encrypt&Sign" disabled>
     </label>
     <br />
     <br />
