Added separate textarea for the ciphertext

--- a/msgsign.html
+++ b/msgsign.html
@@ -48,7 +48,14 @@
     <label>
         Signature：
         <br />
-        <textarea id="Signature" rows="8" style="width: 650px"></textarea>
+        <textarea id="Signature" rows="4" style="width: 650px"></textarea>
+    </label>
+    <br />
+    <br />
+    <label>
+        Signature：
+        <br />
+        <textarea id="Ciphertext" rows="8" style="width: 650px"></textarea>
     </label>
     <br />
 </body>
