--- a/msgsign.html
+++ b/msgsign.html
@@ -53,7 +53,7 @@
     <br />
     <br />
     <label>
-        Signature：
+        Ciphertext：
         <br />
         <textarea id="Ciphertext" rows="8" style="width: 650px"></textarea>
     </label>
